Bug 290955 - Amarok don't repeat plylist with one song
Summary: Amarok don't repeat plylist with one song
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (other bugs)
Version First Reported In: 2.5-git
Platform: Chakra Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
: 307843 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-08 11:01 UTC by dimmer
Modified: 2012-10-13 18:42 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dimmer 2012-01-08 11:01:35 UTC
Version:           2.5 (using Devel) 
OS:                Linux

With only one song in playlist and enabled  "Repeat playlist" song is not repeated.

Reproducible: Always

Steps to Reproduce:
Put one song in playlist and check  "Repeat playlist".

Actual Results:  
Play stops

Expected Results:  
Repeat playlist

OS: Linux (i686) release 3.1-CHAKRA
Compiler: gcc
Comment 1 Myriam Schweingruber 2012-01-09 00:33:38 UTC
It works perfectly fine here, using the phonon-backend-vlc. I wouldn't be astonished if this is yet another gstreamer bug.
Comment 2 dimmer 2012-01-09 17:33:53 UTC
(In reply to comment #1)
> It works perfectly fine here, using the phonon-backend-vlc. I wouldn't be
> astonished if this is yet another gstreamer bug.

With phonon-backend-vlc also not working for me. 

Are you sure that you check "Repeat playlist"? With "Repeat song" and "Repeat album" everything works, with "Repeat playlist" not working. 

Only ONE song in playlist. With two songs also everything works.
Comment 3 Sławomir Szewczyk 2012-01-09 18:13:28 UTC
I confirm with me if you change the VLC does not repeat play list.
Comment 4 Myriam Schweingruber 2012-01-10 07:25:03 UTC
Indeed, repeating playlist doesn't work, I didn't test correctly, sorry for the noise.
Comment 5 Sam Lade 2012-08-25 20:03:02 UTC
Git commit 8c7c3c9082a31687c508cf44096b4687e7f8cde9 by Sam Lade.
Committed on 25/08/2012 at 21:59.
Pushed by lade into branch 'master'.

Fix repeat playlist with a single track

If there was only one track in the playlist, it would not be repeated
correctly.
FIXED-IN:2.7
REVIEW:106175

M  +1    -0    ChangeLog
M  +1    -1    src/playlist/navigators/StandardTrackNavigator.cpp

http://commits.kde.org/amarok/8c7c3c9082a31687c508cf44096b4687e7f8cde9
Comment 6 Myriam Schweingruber 2012-10-13 18:42:28 UTC
*** Bug 307843 has been marked as a duplicate of this bug. ***