Fix repeat playlist with a single track

If there was only one track in the playlist, it would not be repeated
correctly.

BUG:290955
FIXED-IN:2.7
REVIEW:106175